Atualização da resposividade para celulares.2.0

--- a/index.html
+++ b/index.html
@@ -114,6 +114,18 @@
                 required
               />
             </div>
+             <!-- <div>
+              <div class="input-esquerda"> 
+                 <label class="negrito" for="E-mail">E-mail: </label></div>
+                 <input
+                   class="input-padrao"
+                   id="E-mail"
+                   type="text"
+                   maxlength="25"
+                   placeholder="(00) 00 00000-0000 "
+                   required
+                 />
+               </div>  -->
             <div>
               <div class="input-esquerda"> 
               <label class="negrito" for="codigo">Acompanhado: </label></div>
@@ -128,7 +140,7 @@
               </div>
             <div>
               <div class="input-esquerda"> 
-              <label class="negrito" for="codigo">Código: </label></div>
+              <label class="negrito" for="codigo">Código: (Não obrigatório)</label></div>
               <input
                 class="input-padrao"
                 id="codigo"
@@ -137,6 +149,7 @@
                 placeholder=" Digite o código de validação."
                 required
               />
+        
             </div>
           <div id="display-flex">
              <div class="juntos-flex">Concordo com os <div id="openModal"><span id="colorLink">Termos de Uso</span></div>
