Atualização da LGPD

--- a/index.html
+++ b/index.html
@@ -131,8 +131,7 @@
               
                 <div class="negrito">Art. 2º - Armazenamento de Dados:</div> 
 
-                <div class="input-text-aling-left">Os dados emitidos pelos usuários nos sites acessados 
-                enquanto estiverem conectados à rede serão armazenados no banco de dados da Albras por um período de 24(vinte e quatro) horas. 
+                <div class="input-text-aling-left">Os dados fornecidos pelos usuários serão armazenados no banco de dados da Albras apenas para a registro de navegação. 
                 </p></div>
               
                 <div class="negrito">Art. 3º - Exclusão dos Dados:</div>
