--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
         </div>
       </div>
 
-        <div>
 
         <div class="container-form">
           <form id="main-form">
@@ -116,10 +115,10 @@
             <div id="modal" class="hide">
               <div class="modal-header">
                 <h2 data-i18n="lgpdTitle">Leis Gerais de Proteção de Dados - LGPD</h2>
-                <button id="closeModal" data-i18n="lgpdClose">FECHAR</button>
+                <button id="closeModal" data-i18n="lgpdClose">VOLTAR</button>
               </div>
 
-              <div class="modal-body"></div>
+             
               <p>
                 <div class="negrito" data-i18n="art1Title">Art. 1º - Monitoramento das Ações dos Usuários:</div>
 
@@ -151,7 +150,7 @@
                 <div class="input-text-aling-left" data-i18n="art5">A Albras se compromete a utilizar medidas adequadas de segurança para proteger os dados armazenados,
                 evitando acessos não autorizados ou uso indevido das informações. 
               </p></div>
-            </div>
+          
           </form>
         </div>
        </div>
