--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
             </div>
             
               <div>
-                <div class="input-esquerda"><label class="negrito" for="name" data-i18n="nameField">Nome Completo / Full Name: </label></div>
+                <div class="input-esquerda"><label class="negrito" for="name" data-i18n="nameField">Nome / Full Name: </label></div>
                 <input
                   data-i18n-placeholder="placeholderName"
                   class="input-padrao"
                   id="name"
                   type="text"
                   maxlength="30"
-                  placeholder="Digite seu nome completo"
+                  placeholder="Digite seu nome"
                   required
                 />
               </div>
